<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SetOneObjectActivity"
    android:background="@color/black">

    <EditText
        android:id="@+id/set_one_object"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/set_object"
        android:textSize="18sp"
        android:typeface="serif"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:imeOptions="actionNext"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/set_number"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:typeface="serif"
        android:hint="@string/set_number"
        android:layout_below="@id/set_one_object"
        android:textSize="18sp"
        android:imeOptions="actionDone"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/reset_object"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@+id/set_number"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="serif"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/reset"/>

    <Button
        android:id="@+id/delete_object"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@+id/set_number"
        android:layout_toEndOf="@id/reset_object"
        android:layout_toRightOf="@id/reset_object"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:typeface="serif"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/edit_object"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:typeface="serif"
        android:layout_below="@+id/delete_object"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:text="@string/save"/>

</RelativeLayout>
