<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marko.managingofgate.activity.AddBuildingActivity">

    <EditText
        android:id="@+id/add_new_building"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:hint="@string/type_new_building"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/add_new_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="number"
        android:hint="@string/type_new_phone_number"
        android:layout_below="@id/add_new_building"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/add_new_object"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/add_new_number"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/add_new_object"/>

</RelativeLayout>
